# rail-asset-detection

./: .gitignore  README.md  Splitting_Labeled_Images.md  pyproject.toml
models/full_images_300_epoch/: args.yaml  results.csv
models/tiled_images_220_epoch/: args.yaml  results.csv  val_stats.txt
src/: convert_annotations.py  coordinate_conversion.py  predict.py  predict_tiled.py  train_model.py
