[tool.poetry]
name = "rail-asset-detection"
version = "0.1.0"
description = "Rail Asset Detection Model"
authors = ["Daniel Ringler <daniel.ringler@deutschebahn.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.3.1"
# imageio = "^2.35.1"
gdal = "3.8.4"
# pyproj = "^3.7.0"
dill = "^0.3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
